--- a/schoolyourself_lesson/static/html/schoolyourself_lesson.html
+++ b/schoolyourself_lesson/static/html/schoolyourself_lesson.html
@@ -1,3 +1,2 @@
-<div class="schoolyourself-lesson-block">
-<iframe src="{url}" width="800" height="600"></iframe>
-</div>
+<button data-url="{iframe_url}">Launch lesson</button>
+
